tests/test_proof/bad/output/no_vars-conflict.catala_en.Proof
[ERROR] A.y: at least two exceptions overlap for this variable
 --> tests/test_proof/bad/no_vars-conflict.catala_en
  | 
8 |   context y content integer
  |           ^
  + Test
[RESULT] A.y: this variable never returns an empty error
[RESULT] A.x: no two exceptions to ever overlap for this variable
[RESULT] A.x: this variable never returns an empty error
